--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     //Firebase
-    implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.google.firebase:firebase-auth-ktx:19.3.2'
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.5.0'
+
     //Koin
     implementation 'org.koin:koin-android:2.1.6'
     //Kovenant
