--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,14 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".views.message.MessageActivity"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
+            android:theme="@style/AppThemeAuth">
         </activity>
-        <activity android:name=".views.main.MainActivity" />
-        <activity android:name=".views.auth.AuthActivity">
+        <activity
+            android:name=".views.main.MainActivity"
+            android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".views.auth.AuthActivity"
+            android:theme="@style/AppThemeAuth">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
